# luts

./: CLAUDE.md  Cargo.toml  LAYERED_ARCHITECTURE_PLAN.md  README.md  SURREALDB_TOOL_TESTER.md  debug_genai_events.rs  debug_search_test.rs  package.json  pnpm-lock.yaml  prompt_cli.txt  surrealdb_refactor_plan.md  tool-tester-Cargo.toml
.claude/: settings.local.json
crates/luts-agents/: Cargo.toml
crates/luts-agents/src/: lib.rs
crates/luts-agents/src/agents/: base_agent.rs  personality.rs
crates/luts-agents/src/tools/: agent_memory_search.rs  block.rs  delete_block.rs  interactive_tester.rs  mod.rs  modify_core_block.rs  retrieve_context.rs  update_block.rs
crates/luts-api/: Cargo.toml  README.md
crates/luts-api/src/: main.rs
crates/luts-api/src/api/: agents.rs  blocks.rs  mod.rs  openai.rs
crates/luts-cli/: Cargo.toml  README.md
crates/luts-cli/src/: main.rs
crates/luts-common/: Cargo.toml
crates/luts-common/src/: config.rs  constants.rs  error.rs  lib.rs  pricing.rs  types.rs  utils.rs
crates/luts-core/: Cargo.toml  README.md
crates/luts-core/src/: auto_save.rs  block_utils.rs  context_saving.rs  conversation_export.rs  conversation_search.rs  lib.rs  llm.rs  response_streaming.rs  segment_editor.rs  summarization.rs  token_manager.rs
crates/luts-core/src/agents/: base_agent.rs  communication.rs  mod.rs  personality.rs  registry.rs
crates/luts-core/src/context/: core_blocks.rs  fjall_provider.rs  mod.rs  redis_provider.rs  saving.rs  window_manager.rs
crates/luts-core/src/conversation/: auto_save.rs  export.rs  search.rs  segments.rs  summarization.rs
crates/luts-core/src/memory/: block.rs  embeddings.rs  fjall_store.rs  mod.rs  surreal.rs  types.rs
crates/luts-core/src/streaming/: manager.rs
crates/luts-core/src/tools/: block.rs  calc.rs  delete_block.rs  interactive_tester.rs  mod.rs  modify_core_block.rs  retrieve_context.rs  search.rs  semantic_search.rs  update_block.rs  website.rs
crates/luts-core/src/utils/: blocks.rs  mod.rs
crates/luts-framework/: Cargo.toml
crates/luts-framework/src/: lib.rs
crates/luts-llm/: Cargo.toml
crates/luts-llm/src/: lib.rs  llm.rs  tools.rs
crates/luts-llm/src/conversation/: auto_save.rs  bookmarks.rs  export.rs  mod.rs  search.rs  segments.rs  summarization.rs
crates/luts-llm/src/streaming/: manager.rs  mod.rs
crates/luts-memory/: Cargo.toml
crates/luts-memory/src/: block.rs  embeddings.rs  lib.rs  storage.rs  types.rs  utils.rs
crates/luts-tools/: Cargo.toml
crates/luts-tools/src/: base.rs  calc.rs  lib.rs  search.rs  semantic_search.rs  website.rs
crates/luts-tui/: Cargo.toml
crates/luts-tui/src/: agent_selector.rs  app.rs  block_mode.rs  blocks.rs  components.rs  config.rs  config_manager.rs  context_viewer.rs  conversation.rs  events.rs  log_viewer.rs  main.rs  markdown.rs  streaming_test.rs  tool_activity.rs
examples/: simple_tool_demo.rs  tool_tester.rs
