[workspace]
resolver = "2"
members = ["crates/luts-core", "crates/luts-cli", "crates/luts-api", "crates/luts-tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Luts Team"]
description = "Layered Universal Tiered Storage for AI"
license = "MIT"
repository = "https://github.com/username/luts"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
crossterm = "0.27"
futures = "0.3"
futures-util = "0.3"
genai = "0.4.0-alpha.3"
lsm-tree = { version = "0.6" }
luts-core = { path = "crates/luts-core", version = "0.1.0" }
rand = "0.8"
ratatui = "0.26"
ratatui-textarea = "0.4"
ratskin = "0.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.31"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
uuid = { version = "1.5", features = ["v4", "fast-rng"] }
