[package]
name = "luts-agents"
version = "0.1.0"
edition = "2024"
description = "Agent system and agent-specific tools for LUTS"
license = "MIT"

[dependencies]
luts-common = { path = "../luts-common", version = "0.1.0" }
luts-memory = { path = "../luts-memory", version = "0.1.0" }
luts-llm = { path = "../luts-llm", version = "0.1.0" }
luts-tools = { path = "../luts-tools", version = "0.1.0" }
luts-core = { path = "../luts-core", version = "0.1.0" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
genai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tempfile.workspace = true
