[package]
name = "luts-cli"
version = "0.1.0"
edition = "2024"
description = "CLI application for Layered Universal Tiered Storage for AI"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
genai = { workspace = true }
luts-core = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
termimad = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15.7"

[[bin]]
name = "luts"
path = "src/main.rs"
