[package]
name = "luts-core"
version = "0.1.0"
edition = "2024"
description = "Core library for Layered Universal Tiered Storage for AI"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
fast_html2md = "0.0.48"
fjall = "2.11.1"
futures = { workspace = true }
futures-util.workspace = true
genai.workspace = true
lsm-tree = { workspace = true }
rand = { workspace = true }
reqwest = "0.12.22"
scraper = "0.23.1"
serde = { workspace = true }
serde_cbor = "0.11.2"
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
