[package]
name = "luts-core"
version = "0.1.0"
edition = "2024"
description = "Core library for Layered Universal Tiered Storage for AI"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
fast_html2md = "0.0.48"
futures = { workspace = true }
futures-util.workspace = true
genai.workspace = true
rand = { workspace = true }
reqwest = "0.12.22"
scraper = "0.23.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
surrealdb = { version = "2.3.6", features = ["kv-mem", "protocol-http"] }
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
