[package]
name = "luts-framework"
version = "0.1.0"
edition = "2024"
description = "Unified framework re-exporting all LUTS components"
license = "MIT"

[dependencies]
luts-common = { path = "../luts-common", version = "0.1.0" }
luts-memory = { path = "../luts-memory", version = "0.1.0" }
luts-llm = { path = "../luts-llm", version = "0.1.0" }
luts-tools = { path = "../luts-tools", version = "0.1.0" }
luts-agents = { path = "../luts-agents", version = "0.1.0" }
luts-core = { path = "../luts-core", version = "0.1.0" }