[package]
name = "luts-llm"
version = "0.1.0"
edition = "2024"
description = "LLM integration and streaming for LUTS"
license = "MIT"

[dependencies]
luts-common = { path = "../luts-common", version = "0.1.0" }
luts-memory = { path = "../luts-memory", version = "0.1.0" }
luts-core = { path = "../luts-core", version = "0.1.0" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
genai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
uuid = { workspace = true }