[package]
name = "luts-tui"
version = "0.1.0"
edition = "2024"
description = "TUI application for Layered Universal Tiered Storage for AI"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm = "0.28"
futures = { workspace = true }
futures-util = { workspace = true }
luts-core = { workspace = true }
genai = { workspace = true }
ratatui = "0.28"
chrono = { workspace = true, features = ["serde"] }
tui-textarea = "0.6"
toml = "0.8"
dirs = "5.0"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15.7"
rand = "0.8"

[[bin]]
name = "luts-tui"
path = "src/main.rs"
