[package]
name = "luts-tui"
version = "0.1.0"
edition = "2024"
description = "TUI application for Layered Universal Tiered Storage for AI"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
colored = "2.0"
crossterm = "0.28"
dirs = "5.0"
dotenvy = "0.15.7"
futures = { workspace = true }
futures-util = { workspace = true }
genai = { workspace = true }
luts-core = { workspace = true }
rand = "0.8"
ratatui = "0.28"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tui-textarea = "0.6"

[[bin]]
name = "luts-tui"
path = "src/main.rs"
